<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Confluence</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ask_question">AskQuestionActivity</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>German</item>
    </string-array>
    <string-array name="type_array">
        <item>pronunciation</item>
        <item>grammar</item>
        <item>translation</item>
    </string-array>

    <string name="title_activity_posted_question">PostedQuestionActivity</string>
    <string name="action_post_title">Post</string>
    <string name="ask_question_hint">"What's your question?"</string>
    <string name="tagged_in">asking about </string>
    <string name="record">record</string>
    <string name="rerecord">Re-record</string>
    <string name="title_activity_base_action_bar">BaseActionBarActivity</string>
    <string name="add_recording">Add recording</string>
    <string name="play">Play</string>
    <string name="stop">Stop recording</string>
    <string name="title_activity_base">BaseActivity</string>
    
    <string name="profile_picture">Profile picture</string>
    <string name="upvote_description">Answer upvote</string>
    <string name="downvote_description">Answer downvote</string>
    <string name="answer_title">Title</string>
    <string name="answer_description">Description</string>
    <string name="attachment_description">Attachment</string>    

</resources>
