<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.app.AskQuestionActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/question_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="top"
        android:ems="10"
        android:hint="@string/ask_question_hint"
        android:inputType="textMultiLine"
        android:imeOptions="actionSend"
        android:imeActionLabel="Post" >
    </EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="#d3d3d3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:textStyle="italic"
                    android:textSize="@dimen/tag_text"
                    android:text="@string/tagged_in"/>

                <Spinner
                    android:id="@+id/language_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>

                <Spinner
                    android:id="@+id/type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>

            </LinearLayout>

            <Button
                android:id="@+id/add_recording"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/record"
                android:onClick="addRecording" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
    