<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/recording_footer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="#d3d3d3"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/record_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/foreground"
            android:layout_alignLeft="@id/foreground"
            android:layout_alignRight="@id/foreground"
            android:layout_alignTop="@+id/foreground"
            android:background="@android:color/transparent" />

        <RelativeLayout
            android:id="@+id/foreground"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" >

            <TextView
                android:id="@+id/button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add_recording"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/record_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/button_text"
                android:paddingBottom="5dip"
                android:paddingTop="5dp"
                android:contentDescription="@string/record"
                android:src="@drawable/ic_action_mic_active" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/playback_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="visible"
        android:baselineAligned="false"
        android:weightSum="2" >

        <LinearLayout
            android:id="@+id/rerecord_footer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:layout_weight="1" >

            <RelativeLayout
                android:id="@+id/rerecord_side"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:background="#d3d3d3"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/rerecord_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/rerecordforeground"
                    android:layout_alignLeft="@id/rerecordforeground"
                    android:layout_alignRight="@id/rerecordforeground"
                    android:layout_alignTop="@+id/rerecordforeground"
                    android:background="@android:color/transparent" />

                <RelativeLayout
                    android:id="@+id/rerecordforeground"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true" >

                    <TextView
                        android:id="@+id/rerecord_button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:text="@string/rerecord"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/rerecord_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/rerecord_button_text"
                        android:paddingBottom="5dip"
                        android:paddingTop="5dp"
                        android:contentDescription="@string/rerecord"
                        android:src="@drawable/ic_action_mic_active" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/play_footer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:layout_weight="1" >

            <RelativeLayout
                android:id="@+id/play_side"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:background="#d3d3d3"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/play_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/playforeground"
                    android:layout_alignLeft="@id/playforeground"
                    android:layout_alignRight="@id/playforeground"
                    android:layout_alignTop="@+id/playforeground"
                    android:background="@android:color/transparent" />

                <RelativeLayout
                    android:id="@id/playforeground"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true" >

                    <TextView
                        android:id="@+id/play_button_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/play"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/play_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/play_button_text"
                        android:paddingBottom="5dip"
                        android:paddingTop="5dp"
                        android:contentDescription="@string/play"
                        android:src="@drawable/ic_action_play_active" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>